feat(tool): networkCapacity Tool Refactor + Production Defaults (#2834)
Signed-off-by: Alfredo Gutierrez Grajeda <alfredo@hashgraph.com>